--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cy:run": "npx cypress run --browser edge",
+    "cy.open": "npx cypress open"
+  },
+  "cy:report": "cypress run --record --key d1386169-4e70-4373-86c2-d02ab61b3db8"
  
   "repository": {
     "type": "git",
